force-app/main/default/objects/Relationships__c/fields/From_Patron__c.field-meta.xml
<CustomField>
    <fullName>From_Patron__c</fullName>
    <label>From Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related To</relationshipLabel>
    <relationshipName>RelatedTo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>