force-app/main/default/objects/Relationships__c/fields/Non_Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Player_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-Player Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>