force-app/main/default/objects/Relationships__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Photo</label>
    <type>Url</type>
</CustomField>