force-app/main/default/objects/Relationships__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>