force-app/main/default/objects/Relationships__c/fields/To_Patron__c.field-meta.xml
<CustomField>
    <fullName>To_Patron__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related From</relationshipLabel>
    <relationshipName>RelatedFrom</relationshipName>
    <type>Lookup</type>
</CustomField>