force-app/main/default/objects/Relationships__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Travelling Companion</fullName>
            </value>
            <value>
                <fullName>Nominated Loyalty Partner</fullName>
            </value>
            <value>
                <fullName>Loyalty Benefit Sharer</fullName>
                <isActive>false</isActive>
                <label>Loyalty Benefit Sharer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>