force-app/main/default/objects/Relationships__c/fields/Unique_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Composite_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Composite Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>