force-app/main/default/objects/Relationships__c/recordTypes/Nominated_Loyalty_Partner.recordType-meta.xml
<RecordType>
    <fullName>Nominated_Loyalty_Partner</fullName>
    <active>true</active>
    <label>Nominated Loyalty Partner</label>
</RecordType>