force-app/main/default/objects/Relationships__c/recordTypes/P2NP.recordType-meta.xml
<RecordType>
    <fullName>P2NP</fullName>
    <active>true</active>
    <description>Relationships between a patron and a non-player</description>
    <label>Player 2 Non-Player</label>
</RecordType>