force-app/main/default/objects/Relationships__c/recordTypes/P2P.recordType-meta.xml
<RecordType>
    <fullName>P2P</fullName>
    <active>true</active>
    <description>Relationships between 2 patrons</description>
    <label>Player 2 Player</label>
</RecordType>