force-app/main/default/objects/Relationships__c/recordTypes/P2Prospect.recordType-meta.xml
<RecordType>
    <fullName>P2Prospect</fullName>
    <active>true</active>
    <description>Relationships between a patron and a prospect</description>
    <label>Player 2 Prospect</label>
</RecordType>